# shells

./: .gitignore  README.md  main.py  pyproject.toml
commands/git_commit_message/: __init__.py  cli.py  generator.py  git.py  prompts.py
commands/translate/: __main__.py  cli.py  prompt.py
libs/: __init__.py  config.py  llm.py  spinner.py
tests/: cli_test.py  edge_cases_test.py  generator_test.py  git_test.py
